added business analytics service creatives

--- a/_data/pageconfig/solutions.yaml
+++ b/_data/pageconfig/solutions.yaml
@@ -1,85 +1,212 @@
 pages:
-  cloud-solutions.md:
-    title: Cloud Solutions
-    tagline: "Unlock Your Business's Full Potential with AxOps&#8482; Cloud Solutions"
-    main_image_src: /assets/img/photos/about7.jpg
-    main_image_srcset: /assets/img/photos/about7@2x.jpg 2x
+  business-analytics.md:
+    title: Business Analytics
+    tagline: "Unlock the Power of Your Data with AxOps&#8482; Business Analytics Solutions"
 
     desired_outcomes:
       - 
         image: /assets/img/icons/lineal/target.svg
-        title: High Availability & Elasticity
+        category: Data Visualization
+        description: >
+          Clear and concise presentation of complex data,
+          easy identification of patterns, trends, and insights
+          to inform decision-making for business growth.
+
+      - 
+        image: /assets/img/icons/lineal/target.svg
+        category: Predictive Analytics
+        description: >
+          Accurate forecasting of trends and patterns,
+          proactive identification of opportunities
+          to optimise business processes and decision-making.
+
+      - 
+        image: /assets/img/icons/lineal/target.svg
+        category: Data Warehousing
+        description: >
+          Improved data management and organisation,
+          integration of data from various sources, 
+          faster and more efficient analysis of large datasets.
+
+      - 
+        image: /assets/img/icons/lineal/target.svg
+        category: Data Mining
+        description: >
+          Identification of hidden patterns and relationships in data,
+          improved understanding of customer behaviors and preferences,
+          to inform business strategy.
+
+      -  
+        image: /assets/img/icons/lineal/target.svg
+        category: Performance Management
+        description: >
+          Improved tracking and monitoring of KPIs,
+          optimization of business performance and profitability,
+          improved alignment of goals and objectives across the organisation.
+
+      - 
+        image: /assets/img/icons/lineal/target.svg
+        category: Reporting and Dashboards
+        description: >
+          Quick and easy access to critical business data and insights,
+          reliable reporting of metrics and KPIs,
+          improved decision-making based on the latest intelligence.
+
+    common_obstacles:
+      - 
+        image: /assets/img/icons/lineal/puzzle.svg
+        category: Data Quality
+        description: Poor data quality often leads to inaccurate insights and impacts decision making negatively.
+      - 
+        image: /assets/img/icons/lineal/puzzle.svg
+        category: Technical Complexity
+        description: Lack of technical skills or complex tools hinder the ability to analyze data effectively.
+      - 
+        image: /assets/img/icons/lineal/puzzle.svg
+        category: Data Privacy & Security
+        description: Concerns around data privacy and security prevent organizations from sharing or storing data in the cloud.
+      - 
+        image: /assets/img/icons/lineal/puzzle.svg
+        category: Limited Resources
+        description: Lack of budget, time, or sufficiently qualified personnel to invest in business analytics initiatives.
+      - 
+        image: /assets/img/icons/lineal/puzzle.svg
+        category: Data Silos
+        description: Data being stored in multiple locations, different formats or applications, makes it difficult to integrate and analyze.
+      - 
+        image: /assets/img/icons/lineal/puzzle.svg
+        category: Resistance to Change
+        description: Resistance to change or fear of disruption to existing processes prevents adoption of new tools and processes.
+
+    outcomes_vs_painpoints:
+
+      - category: Improved Decision-Making
+        priority: 1
+        painpoints:
+          - Lack of actionable insights from data
+          - Difficulty in identifying key metrics
+          - Inefficient reporting processes
+
+      - category: Enhanced Operational Efficiency
+        priority: 2
+        painpoints:
+          - Inconsistent data quality
+          - Manual data entry processes
+          - Lack of standardization in data formats and definitions
+
+      - category: Optimized Marketing and Sales
+        priority: 3
+        painpoints:
+          - Difficulty in tracking customer behavior
+          - Inability to measure campaign performance
+          - Poor data integration across platforms
+
+      - category: Improved Financial Performance
+        priority: 4
+        painpoints:
+          - Limited visibility into financial data
+          - Inability to forecast accurately
+          - Inefficient financial reporting processes
+
+      - category: Enhanced Customer Experience
+        priority: 5
+        painpoints:
+          - Difficulty in understanding customer needs
+          - Inefficient customer service processes
+          - Inability to personalize customer interactions
+
+      - category: Streamlined Supply Chain Management
+        priority: 6
+        painpoints:
+          - Limited visibility into supply chain data
+          - Inefficient inventory management processes
+          - Inability to track supplier performance
+
+    pitch: >
+      <p>At AxOps&#8482;, we provide business analytics solutions that can help you unlock the full potential of your data. Our team of experts is dedicated to helping you achieve your desired outcomes by providing customized solutions tailored to your specific business needs. </p>
+      <p>Whether you are looking to improve your decision-making process, optimize your operations, or enhance your customer experience, our business analytics solutions can help you get there. By leveraging the power of data, we can help you identify new opportunities for growth and innovation, and make data-driven decisions that can help you stay ahead of the competition. </p>
+      <p>However, we understand that achieving these outcomes can come with challenges. That's why our team is equipped to tackle these challenges head-on, including data management, data quality, and data governance. We are here to guide you through the process and help you make informed decisions that can maximize the value of your data. </p>
+      <p>Our services include a comprehensive assessment of your current data infrastructure and workflows, customized business analytics solution design, implementation and migration, as well as ongoing management and support. We are committed to providing you with a seamless and stress-free experience that can help you achieve your desired outcomes. </p>
+  
+  cloud-solutions.md:
+    title: Cloud Solutions
+    tagline: "Unlock Your Business's Full Potential with AxOps&#8482; Cloud Solutions"
+
+    desired_outcomes:
+      - 
+        image: /assets/img/icons/lineal/target.svg
+        category: High Availability & Elasticity
         description: "The ability to easily scale up or down resources as needed and quickly adapt to changing business requirements."
       - 
         image: /assets/img/icons/lineal/target.svg
-        title: Cost Efficiency
+        category: Cost Efficiency
         description: "Reduce capital expenditure on hardware and infrastructure and move to a pay-as-you-go model."
       - 
         image: /assets/img/icons/lineal/target.svg
-        title: Security & Compliance
+        category: Security & Compliance
         description: "Access to robust security features and compliance frameworks to ensure data protection and regulatory compliance."
       - 
         image: /assets/img/icons/lineal/target.svg
-        title: Increased Productivity
+        category: Increased Productivity
         description: "Access to powerful tools and automation to streamline workflows and improve productivity."
       - 
         image: /assets/img/icons/lineal/target.svg
-        title: Innovation & Agility
+        category: Innovation & Agility
         description: "Access to cutting-edge technology and resources to drive innovation and stay ahead of the competition."
 
     common_obstacles:
       -
         image: /assets/img/icons/lineal/puzzle.svg
-        title: Security Concerns
+        category: Security Concerns
         description: "Some customers may be hesitant to move their data and applications to the cloud due to concerns about data security, regulatory compliance, and privacy."
       -
         image: /assets/img/icons/lineal/puzzle.svg
-        title: Lack of In-House Expertise
+        category: Lack of In-House Expertise
         description: "Adopting and managing cloud solutions often require specialized skills and knowledge that may not be available in-house, resulting in errors and delays."
       -
         image: /assets/img/icons/lineal/puzzle.svg
-        title: Integration Issues
+        category: Integration Issues
         description: "Customers may face challenges when trying to integrate cloud solutions with their existing IT infrastructure, operations, and applications."
       -
         image: /assets/img/icons/lineal/puzzle.svg
-        title: Cost Uncertainty
+        category: Cost Uncertainty
         description: "Although cloud solutions can provide significant savings in CapEx, variability in OpEx is harder to forecast, and hence a barrier to entry for some customers."
       -
         image: /assets/img/icons/lineal/puzzle.svg
-        title: Limited Customization
+        category: Limited Customization
         description: "Cloud solutions may have limitations in terms of customization and flexibility, which may not meet the specific needs of certain customers."
 
     outcomes_vs_painpoints:
       - 
-        outcome: Achieve Cost Savings via Efficient Resource Utilization and Flexible Pricing
+        category: Achieve Cost Savings via Efficient Resource Utilization and Flexible Pricing
         priority: 1
         painpoints:
           - Difficulty in accurately predicting resource needs, leading to overprovisioning and wasted resources
           - Complex pricing models and hidden costs that make it difficult to manage expenses effectively
 
       - 
-        outcome: Improve Scalability and Agility to Support Business Growth
+        category: Improve Scalability and Agility to Support Business Growth
         priority: 2
         painpoints:
           - Legacy IT infrastructure that is difficult to scale and adapt to changing business needs
           - Time-consuming and resource-intensive deployment and management processes that hinder agility
 
       - 
-        outcome: Enhance Data Security and Regulatory Compliance
+        category: Enhance Data Security and Regulatory Compliance
         priority: 3
         painpoints:
           - Security risks associated with managing and securing data in-house
           - Complex and evolving regulatory compliance requirements that are difficult to navigate and keep up with
 
       - 
-        outcome: Increase Operational Efficiency and Productivity
+        category: Increase Operational Efficiency and Productivity
         priority: 4
         painpoints:
           - Inefficient and manual IT processes that lead to errors, delays, and increased costs
           - Lack of visibility and control over IT infrastructure and operations, leading to reduced productivity
 
       - 
-        outcome: Drive Innovation and Competitive Advantage via Advanced Cloud Technologies and Services
+        category: Drive Innovation and Competitive Advantage via Advanced Cloud Technologies and Services
         priority: 5
         painpoints:
           - Limited in-house expertise and resources to adopt and integrate new cloud technologies
